syntax = "proto3";

option go_package = "common/grpc/authentication";

package authentication;

service AuthenticationService {
  rpc CheckAndGetUserInfo (CheckAndGetUserInfoRequest) returns (CheckAndGetUserInfoResponse) {}
}


message CheckAndGetUserInfoRequest {
  string token = 1;
}

message CheckAndGetUserInfoResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  repeated string permissions = 6;
}